--- a/src/assets/pages/HajjPrograms/HajjPrograms.css
+++ b/src/assets/pages/HajjPrograms/HajjPrograms.css
@@ -8,7 +8,7 @@
 
 .par{
     background-color: rgb(71, 69, 65);
-    box-shadow: 5px 10px 20px rgb(255, 153, 0) inset;
+    box-shadow: 5px 10px 20px rgba(255, 198, 113, 0.726) inset;
      height:fit-content ;
     margin: auto;
     margin-bottom: 50px;
@@ -129,7 +129,7 @@
    
   width: 200px;
   height: 150px;
-  background:linear-gradient(to left ,rgba(248, 198, 89, 0.904),rgb(117, 86, 27));
+  background:linear-gradient(to right,rgba(248, 198, 89, 0.918),rgba(117, 86, 27, 0.925));
   border-radius: 20px;
   text-align: right;
   padding: 20px;
@@ -168,6 +168,32 @@ font-size: 18px;
 }
 
 }
+
+.price-hajj{
+    height: auto;
+    width: 80%;
+
+  margin-top: 90px;
+display: flex;
+flex-direction: row;
+
+margin-bottom: 50px;
+margin-left: 10%;
+}
+
+.price-hajj .pric{
+   margin-left: 10px;
+   border-radius: 50%;
+   width: 400px;
+   height:150x;
+   background:linear-gradient(to top ,rgba(248, 198, 89, 0.904),rgb(117, 86, 27));
+color: white;
+font-size: 20px;
+   text-align: center;
+   padding: 20px;
+}
+
+
 .gift-parent{
     margin-top: 50px;
     position: relative;
@@ -241,7 +267,7 @@ font-size: 18px;
 }
 
 
-@media(max-width: 700px){
+@media(max-width:1200px){
     .gift1{
         width: 200px !important;
     height: 200px !important;
@@ -280,7 +306,7 @@ font-size: 18px;
     }
 }
 
-/* @media(max-width: 950px){
+/* @media(max-width: 1200px){
     
     .gift1{
         width: 300px !important;
@@ -306,7 +332,7 @@ font-size: 18px;
 
     }
     .gift4{
-        margin-left: 100px !important;
+        margin-left: 200px !important;
         width: 170px !important;
         height: 170px !important;
         margin-top: 300px !important;
@@ -314,8 +340,8 @@ font-size: 18px;
     .gift5{
         width: 300px !important;
         height: 300px !important;
-        margin-left: 400px !important;
-        margin-top: 290px !important;
+        margin-left: 500px !important;
+        margin-top: 200px !important;
 
     }
 } */
@@ -426,7 +452,7 @@ video{
 .book-trip {
 width: 100%;
 height: 100px;
-margin-top: 50px;
+margin-top: 100px;
 text-align: center;
 }
 .book-trip  button{
