--- a/src/assets/sections/PlacesInMadena/PlacesInMadena.css
+++ b/src/assets/sections/PlacesInMadena/PlacesInMadena.css
@@ -38,13 +38,13 @@
 
 
 
-.parent-type-aumrah {
+.PlacesInMadena .parent-type-aumrah {
     display: flex;
     justify-content: space-evenly;
     margin-bottom: 50px;
 }
 
-section,
+ .PlacesInMadena section,
 .front,
 .back {
     width: 400px;
@@ -52,20 +52,20 @@ section,
     border-radius: 20px;
 }
 
-section {
+.PlacesInMadena section {
     transition: 0.3s;
     position: relative;
     transform-style: preserve-3d;
 
 }
 
-.front {
+.PlacesInMadena .front {
     position: absolute;
     z-index: 1;
     backface-visibility: hidden;
 }
 
-.back {
+.PlacesInMadena .back {
 
     background-color: rgb(73, 73, 72);
     position: absolute;
@@ -73,17 +73,17 @@ section {
     color: white;
 }
 
-section:hover {
+.PlacesInMadena section:hover {
     transform: rotateY(180deg);
 }
 
-.front img {
+.PlacesInMadena .front img {
     width: 100%;
     height: 100%;
     border-radius: 20px;
 }
 
-.front .tex {
+.PlacesInMadena .front .tex {
     position: absolute;
     background-color: #00000073;
     width: 100%;
@@ -92,12 +92,12 @@ section:hover {
     color: rgb(230, 204, 122);
     border-radius: 20px 80px 20px 20px;
 }
-.front .tex  h2{
+.PlacesInMadena .front .tex  h2{
     text-align: center;
 }
 
 
-.back h2 {
+.PlacesInMadena .back h2 {
     text-align: center;
     margin-top: 5px;
     color: rgb(230, 204, 122);
@@ -105,7 +105,7 @@ section:hover {
 
 
 
-.back p {
+.PlacesInMadena .back p {
     font-weight: bold;
     padding: 2px;
     border-radius: 6px;
@@ -115,16 +115,16 @@ section:hover {
 
 @media(max-width: 850px){
 
-    .parent-type-aumrah{
+    .PlacesInMadena .parent-type-aumrah{
         display: flex;
         flex-direction: column;
         margin-bottom: 50px;
         gap: 50px;
     }
-.parent-type-aumrah h1{
+.PlacesInMadena .parent-type-aumrah h1{
 font-size: 25px;
 }
-    section{
+    .PlacesInMadena section{
      margin: auto;
     }
 }
