--- a/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
+++ b/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
@@ -80,7 +80,7 @@ body{
     height: 150px;
     background: linear-gradient(to left, #9b7f34, #a88f3e, #a7942d, #dac08a);
     border-radius: 8px;
-    width: 300px;
+    width: 250px;
     margin-left: 40px;
     margin-top: 120px;
     text-align: center;
@@ -135,7 +135,7 @@ body{
   border: 3px solid #f1f1f1;
 }
 
- .contain-umrah .table-umrah{
+ .contain-umrah .table-umrah {
   overflow-x: scroll;
  }
 
@@ -269,7 +269,11 @@ margin-left: 100px;
 }
 .prog-add .numb{
   width: 50px;
-  margin-left: 170px;
+  margin-left: 150px;
+}
+.prog-add .name{
+  margin-left: 70px;
+
 }
 .prog-add div{
   margin-left: 100px;
@@ -280,7 +284,7 @@ margin-left: 100px;
   text-align: right;
   font-size: 20px;
   margin-top: 50px;
-  margin-left: 30px;
+  margin-left: 10px;
 
 }
 
@@ -318,10 +322,12 @@ margin-right: 50px;
   margin-top:80px ;
   text-align: center;
  margin-left: 40%;
- background-color: #c4cc53;
+ background-color: #705a13;
  color: #332b13;
  width: 20%;
  font-size: 25px;
+ border-radius: 50%;
+ margin-bottom: 20px;
 }
 
 .add-btn:hover{
@@ -377,13 +383,17 @@ margin-right: 50px;
 .seting-box1{
   margin-top: 100px;
 }
-.travel-brog{
+.travel-brog ,.total-number {
 text-align: right;
 margin-right: 50px;
 }
-.travel-brog select{
+.travel-brog select {
 width: 200px;
 height: 40px;
 text-align: right;
 padding: 10px;
+margin-left: 50px;
+}
+.date{
+  margin-right: 20px;
 }
