--- a/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
+++ b/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
@@ -375,3 +375,7 @@ margin-top: 40px;
   margin-top: 100px;
 }
 
+.contain-hajj h3 , .contain-umrah h3{
+  padding: 20px ;
+  color: var(--color-gold);
+} 
