--- a/src/assets/pages/Hotel/Hotel.css
+++ b/src/assets/pages/Hotel/Hotel.css
@@ -30,7 +30,7 @@ margin-left: 10px;
 .frame-hotel{
     background-image: linear-gradient(346deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 22%,rgba(140, 140, 140,0.04) 22%, rgba(140, 140, 140,0.04) 69%,rgba(225, 225, 225,0.04) 69%, rgba(225, 225, 225,0.04) 100%),linear-gradient(31deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 42%,rgba(140, 140, 140,0.04) 42%, rgba(140, 140, 140,0.04) 85%,rgba(225, 225, 225,0.04) 85%, rgba(225, 225, 225,0.04) 100%),linear-gradient(55deg, rgba(225,134,30, 0) 0%, rgba(225,134,30, 0) 13%,rgba(140, 140, 140,0.04) 13%, rgba(140, 140, 140,0.04) 72%,rgba(225, 225, 225,0.04) 72%, rgba(225, 225, 225,0.04) 100%),linear-gradient(90deg, rgb(22,18,14),rgb(22,18,14));
     border-radius: 10px;
-    box-shadow: 0px 0px 16px var(--color-dark-gold);
+    box-shadow: 5px 7px 20px rgba(255, 198, 113, 0.726) inset;
     padding: 10px;
     color: white;
 }
