--- a/src/assets/pages/UmrahPrograms/UmrahPrograms.css
+++ b/src/assets/pages/UmrahPrograms/UmrahPrograms.css
@@ -5,7 +5,7 @@
 .frame-umrah-programs{
     background-color: #2a2b29;
     border-radius: 10px;
-    box-shadow: 0px 0px 16px rgb(255, 247, 247);
+    box-shadow: 5px 10px 20px rgba(255, 198, 113, 0.726) inset;
     padding: 90px 30px;
     margin: auto;
     color: white;
