--- a/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
+++ b/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
@@ -199,20 +199,21 @@ body{
 }
 .seting{
   width: 100%;
+  height: 120vh;
 }
 
 .progr-parent{
   margin: 20px 25px 20px 21%
 }
 .prog1 {
-  height: 500px;
+  height: 530px;
   box-shadow: 5px 10px 20px #a7952dda inset;
 }
 .prog1 p {
   color: #fffefb;
   text-align: right;
   margin-right: 20px;
-  margin-bottom: 12px;
+  margin-bottom: 2px;
   font-size: 20px;
 
 }
@@ -226,6 +227,7 @@ body{
   border: none;
   font-size: 20px;
   color: white;
+  margin-bottom: 5px;
   
 }
 .prog-umrah .delet ,.prog-hajj .delet{
@@ -235,6 +237,7 @@ body{
   width: 25%;
   border: none;
   font-size: 20px;
+  margin: 5px;
 }
 .tableProgeam ul{
   color:#fff;
