--- a/src/assets/pages/HajjPrograms/HajjPrograms.css
+++ b/src/assets/pages/HajjPrograms/HajjPrograms.css
@@ -7,15 +7,12 @@
 }
 
 .par{
-    background-color: #2a2b29;
-
+    background-color: rgb(71, 69, 65);
     box-shadow: 5px 10px 20px rgba(255, 198, 113, 0.726) inset;
      height:fit-content ;
     margin: auto;
     margin-bottom: 50px;
-      border-radius: 10px;
-      padding: 90px 30px;
-
+    border-radius: 50px;
 }
 .par1 {
   padding-top: 50px;
@@ -132,11 +129,13 @@
    
   width: 200px;
   height: 150px;
-  background:linear-gradient(to right, rgba(255, 198, 113, 0.726),rgba(117, 86, 29, 0.808));
-
+  background:linear-gradient(to right,rgba(248, 198, 89, 0.918),rgba(117, 86, 27, 0.925));
   border-radius: 20px;
   text-align: right;
   padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .chiled span{
 
@@ -190,8 +189,8 @@ margin-left: 10%;
    border-radius: 50%;
    width: 400px;
    height:150x;
-   background:linear-gradient(to top, rgba(255, 198, 113, 0.726),rgba(117, 86, 29, 0.808));
-   color: white;
+   background:linear-gradient(to top ,rgba(248, 198, 89, 0.904),rgb(117, 86, 27));
+color: white;
 font-size: 20px;
    text-align: center;
    padding: 20px;
@@ -466,12 +465,10 @@ text-align: center;
     border-radius: 50%;
     height: 50px;
     font-size: x-large;
-    background-color:rgba(143, 107, 53, 0.808);
+    background-color: rgb(121, 105, 42);
     color: rgb(27, 25, 25);
 }
 .book-trip  button:hover{
  width: 55%;
  height: 60px;
- background-color: rgba(226, 187, 128, 0.788);
-
 }
