--- a/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
+++ b/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
@@ -419,4 +419,12 @@ margin-right: 50px;
 .seting-box1{
   margin-top: 100px;
 }
-
+.hotelsForProgram{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.hotelsForProgram .delet{
+  margin-left: 20px;
+    width: 150px;
+}
