--- a/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
+++ b/src/assets/pages/DashBoardEmployee/DashBoardEmployee.css
@@ -222,8 +222,9 @@ body{
   margin: 20px 25px 20px 21%
 }
 .prog1 {
-  height: 530px;
+  height: auto;
   box-shadow: 5px 10px 20px #a7952dda inset;
+  padding-bottom: 50px;
 }
 .prog1 p {
   color: #fffefb;
@@ -268,6 +269,7 @@ font-size: 22px;
 background-color: white;
 color: red;
 font-size: 22px;
+margin-bottom: 50px;
 }
 .tableProgeam ul{
   color:#fff;
@@ -277,8 +279,9 @@ font-size: 22px;
 }
 .prog2{
   width: 450px;
-  height: 500px;
-  box-shadow: 5px 10px 20px  #a7952dda inset;
+  height: auto;
+  box-shadow: 5px 10px 0px 20px #a7952dda inset;
+
 }
 .progr-parent h3{
   margin-top: 40px;
