--- a/src/assets/pages/PagesRegister/RegisterProgramSpecial/RegisterProgramSpecial.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramSpecial/RegisterProgramSpecial.css
@@ -265,6 +265,7 @@ input[type="radio"] {
 .order-send{
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .order-send button {
