LOGIN to dash board

--- a/src/assets/pages/DashBoardManager/DashBoardManager.css
+++ b/src/assets/pages/DashBoardManager/DashBoardManager.css
@@ -144,7 +144,7 @@ padding: 30px;
     display: flex;
     flex-direction: row;
     gap: 13%;
-  box-shadow: 5px 10px 20px  #a7952dda inset;;
+  box-shadow: 5px 10px 20px  #a7952dda inset;
   width: 78%;
 }
 
