--- a/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
+++ b/src/assets/pages/PagesRegister/RegisterProgramUmrah/RegisterProgramUmrah.css
@@ -36,12 +36,20 @@
 }
 
 .container h3,
-i {
+i , .alert-message{
     padding: 10px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     color: aliceblue;
     text-align: right;
+}
+.alert-message{
+    padding: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    color:var(--color-text);
+    text-align: center; 
+    background-color: rgba(32, 35, 37, 0.522);
 }
 
 
