--- a/src/assets/pages/UmrahPrograms/UmrahPrograms.css
+++ b/src/assets/pages/UmrahPrograms/UmrahPrograms.css
@@ -106,12 +106,14 @@ b {
     background-color: rgb(80, 79, 79);
     
 }
-.book-trip a{
+.book-trip a , .book-trip p{
    list-style: none;
    text-decoration: none;
    color: azure;
    font-size: 24px;
    text-align: center;
+   border-radius: 25%;
+    background-color: rgb(80, 79, 79);
 }
 
 .book-trip button:hover {
